# polymarket

./: .gitignore  AGENT_HANDOFF.md  CMakeLists.txt  DASHBOARD_GUIDE.md  INSTRUCTIONS.md  LIVE_SETUP.md  MARKET_SELECTION_GUIDE.md  POLYMARKET_ARB_DETECTOR_PLAN.md  README.md  REWARD_HARVEST_STRATEGY.md  config.acr.json  config.active_100.json  config.benchmark.json  config.json  config.live.json  config.live_dbg.json  config.live_ireland.json  config.mocklive.json  config.neg_risk_active.json  config.quiet.json  config.rewards.json  config.rewards_dbg.json  config.rewards_v.json  config.shadow.json  config.strategy.json  instructions.txt  outputs.txt  run_live.sh
analysis/: profile_plots.py  returns_model.py
dashboard/: index.html  requirements.txt  server.py  start.sh
deploy/: benchmark_ec2.sh  benchmark_matrix.sh  mm.env.example  polymarket-dashboard.service  polymarket-mm.service  polymarket-telemetry.service  run_ec2.sh  setup_ec2.sh  tune_low_latency.sh
src/: acr.hpp  arbitrage.cpp  arbitrage.hpp  clob_auth.hpp  eip712.hpp  eip712_sign.hpp  fill_parser.hpp  http_json.cpp  http_json.hpp  live_gateway.cpp  live_gateway.hpp  live_order.hpp  logger.cpp  logger.hpp  main.cpp  market_metadata.cpp  market_metadata.hpp  mock_live_gateway.cpp  mock_live_gateway.hpp  oms.cpp  oms.hpp  orderbook.cpp  orderbook.hpp  parser.cpp  parser.hpp  pipeline.hpp  relay_gateway.hpp  rewards.cpp  rewards.hpp  runtime.cpp  runtime.hpp  throttle.hpp  types.hpp  websocket.cpp  websocket.hpp
tests/: live_test.cpp  test_executor.cpp
tools/: approve_allowances.py  build_live_config.py  derive_api_key.py  derive_api_key_1271.py  fill_sim.py  fill_telemetry.py  generate_active_config.py  hedge_arb_test.py  measure_latency.py  mm_gateway.py  new_wallet.py  order_gateway_server.py  probe_safe_maker.py  profile_run.py  ref_order_v2.py  swap_usdc.py  verify_collateral.py  verify_eip712.py  wrap_pusd.py  ws_schema_dump.py
